Updated translations to v2.4

--- a/src/translations/DE.ini
+++ b/src/translations/DE.ini
@@ -3,7 +3,7 @@ Homebrews
 PSP
 PS1
 Alle
-EINSTELLUNGEN
+Einstellungen
 Starten
 Details
 Kategorie
@@ -17,7 +17,7 @@ Musik & Töne
 Themenfarbe
 Eigener Hintergrund
 Covers Downloaden
-Cover-Datenbank neu laden
+Cover Downloaden
 Sprache
 EIN
 AUS
@@ -48,11 +48,11 @@ Startscan
 Cache Aktualisieren
 BENUTZERDEFINIERT
 Homebrew - Spezieller 'Vita'-Archiv-Download
-Scan
+*-Cover werden heruntergeladen
 Warten Sie mal...
-Speisekarte
+* gefunden
+Cover nicht gefunden
 Rosa
-Erledigt. Bitte 'Cache aktualisieren' über das Startmenü
 Cover * gefunden!
 Cache wurde aktualisiert.
 Schreiben in den Cache ... bitte nicht anhalten/ausschalten
@@ -88,7 +88,7 @@ WonderSwan
 PICO-8
 Musik: Shuffle
 Geloopte
-Ansicht #5/#6 Zulassen
+2D-Ansichten
 Ansicht #7
 Tauschen
 Aktuelle Ansicht Sperren
@@ -104,7 +104,7 @@ Vita-Partition (gesperrt)
 PSPEMU-Partition
 Retroarch-Partition
 Arcade-Partition
-Hacken 'Vita' in A.#5+
+'Vita' in 2D Zerhacken
 Kürzlich Gespielt
 Zurück zum Zuletzt Gespielten Spiel & Kategorie
 MSX2
@@ -117,3 +117,11 @@ Atari Lynx
 ColecoVision
 Vectrex
 Neo Geo Pocket Color
+Neu kategorisieren: <
+Standard
+Umbenennen
+Umbenennen. Leer setzt den Titel zuruck.
+Internetverbindung erforderlich
+Credits
+Hintergrund Downloaden
+Deutsch
