--- a/src/translations/FR.ini
+++ b/src/translations/FR.ini
@@ -1,7 +1,7 @@
-Playstation Vita
+﻿PS Vita
 Homebrews
-Playstation Portable
-Playstation One
+PSP
+PS1
 Tout
 Paramètres
 Lancer
@@ -17,7 +17,7 @@ Musique et sons
 Couleur du thème
 Fond personnalisé
 Télécharger les jaquet.
-Rafraîchir la base de donnée
+Télécharger la jaquette
 Language
 Oui
 Non
@@ -33,9 +33,9 @@ Sélectionner
 Nintendo 64
 Super Nintendo
 Nintendo Entertainment System
-GameBoy Advance
-GameBoy Color
-GameBoy
+Game Boy Advance
+Game Boy Color
+Game Boy
 Sega Genesis/Mega Drive
 Sega Master System
 Sega Game Gear
@@ -48,14 +48,14 @@ Analyse au démarrage
 Actualiser le cache
 Personnalisé
 Homebrew - Téléchargement de l'archive 'Vita'
-Analyse
+Téléchargement des couvertures *
 Patientez s'il vous plaît...
-Menu
+Trouvé *
+Jaquette non trouvée
 Rose
-Terminé. Veuillez 'Actualiser le cache' via le menu Démarrer
-Jaquettes * trouvée !
+Jaquette * trouvée!
 Le cache a été mis à jour.
-écrire dans le cache... veuillez ne pas mettre en veille/éteindre la console
+écrire dans le cache... veuillez ne pas suspendre/éteindre
 Sega Dreamcast
 Sega CD
 Sega 32X
@@ -76,35 +76,35 @@ Modèle Playstation 2
 Cristal
 Véritable Mode SwitchView
 Voir le Manuel/les Trophées
-Navigateur Internet
-PS Store
-Photos
-Cross-Controller
-Paramètres Système
-Fermer HexFlow
+Nouvelles
+Magasin
+Album
+Contrôles
+Paramètres du Système
+Sortir
 Trophées
 WonderSwan Color
 WonderSwan
 PICO-8
 Musique: Aléatoire
-En boucle
-Autoriser la vue #5/#6
+Boucle
+Affichages 2D
 Vue #7
 Échanger
-Mode d'affichage
+Verrouiller Cette Vue
 Décrypter les Icônes
-Catégories RetroFlow
+RetroFlow
 Paramètres RetroFlow
 Actualiser les Icônes
-Masquer catégories vide
+Masquer catégories vides
 Bouton pour catégorie
-Apps Système
+Utilitaires
 Vue fluide #0
 Partition Vita (verrouillée)
 Partition PSPEMU
 Partition Retroarch
 Partition Arcade
-Recadrer 'Vita' dans V.#5+
+Recadrer 'Vita' dans 2D
 Joué récemment
 Revenir au dernier jeu joué et à la catégorie
 MSX2
@@ -117,14 +117,11 @@ Atari Lynx
 ColecoVision
 Vectrex
 Neo Geo Pocket Color
-Télécharger la jaquette
-Changer de catégorie
+Changer de catégorie: <
+Défaut
 Renommer
-Par défaut
+Renommer. Laissez vide pour reinitialiser le titre.
 Connexion Internet requise
-Jaquette non trouvée !!!
-Téléchargement des jaquettes...
-Téléchargement des jaquettes en cours...
-ID Jaquette 
-Trouvé 
- sur 
+Les crédits
+Télécharger l'arrière-plan
+Français
