--- a/src/translations/IT.ini
+++ b/src/translations/IT.ini
@@ -3,7 +3,7 @@ Homebrews
 PSP
 PS1
 Tutto
-IMPOSTAZIONI
+Impostazioni
 Avvia
 Dettagli
 Categoria
@@ -16,8 +16,8 @@ Ombre e Riflessi
 Musica e Suoni
 Colore del Tema
 Sfondo Personalizzato
-Scarica Cover
-Ricarica il Database delle Cover
+Scarica Copertine
+Scarica Copertina
 Lingua
 ON
 OFF
@@ -48,11 +48,11 @@ Scansione all'avvio
 Aggiorna Cache
 PERSONALIZZATO
 Homebrew - Download dell'archivio 'Vita'
-Scansione
+Download di copertine *
 Attendere prego...
-Menù
+Trovato *
+Copertina non trovata
 Rosa
-Fatto. Per favore usa 'Aggiorna Cache' tramite il menu Start
 Copertina * trovata!
 La cache è stata aggiornata.
 scrittura nella cache... per favore non sospendere/spegnere
@@ -88,7 +88,7 @@ WonderSwan
 PICO-8
 Musica: Casuale
 Loop
-Consenti Vista #5/#6
+Visualizzazioni 2D
 Vista #7
 Scambio
 Blocca Questa Vista
@@ -104,7 +104,7 @@ Partizione Vita (bloccata)
 Partizione PSPEMU
 Partizione Retroarch
 Partizione Arcade
-Ritaglia 'Vita' in V.#5+
+Ritaglia 'Vita' in 2D
 Giocato Recentemente
 Torna all'ultimo gioco avviato e alla categoria
 MSX2
@@ -117,3 +117,11 @@ Atari Lynx
 ColecoVision
 Vectrex
 Neo Geo Pocket Color
+Sostituisci Categoria: <
+Predefinito
+Rinominare
+Rinominare. Lascia vuoto per reimpostare il titolo.
+Connessione Internet richiesta
+Crediti
+Scarica Sfondo
+Italiana
