--- a/src/translations/JA.ini
+++ b/src/translations/JA.ini
@@ -17,7 +17,7 @@ PS1
 テーマの色
 バックグラウンド画像
 カバーをダウンロード
-カバーDBを再読み込み
+カバーをダウンロード
 言語
 オン
 オフ
@@ -48,11 +48,11 @@ PC Engine
 キャッシュを更新
 カスタム
 自作 - 「Vita」アーカイブからダウンロード
-スキャン
+* カバーのダウンロード
 お待ちください...
-メニュー
+* が見つかりました
+カバーが見つかりません
 ピンク
-終わり。 スタートメニューから「キャッシュを更新」してください
 カバー * が見つかりました!
 キャッシュが更新されました。
 キャッシュへの書き込み...一時停止/電源オフしないでください
@@ -88,7 +88,7 @@ WonderSwan
 PICO-8
 音楽: シャッフル
 ループ
-ビュー #5/#6 を許可
+2D ビューを許可
 表示 #7
 スワップ
 現在の表示をロック
@@ -104,7 +104,7 @@ Vita パーティション (ロック)
 PSPEMU パーティション
 Retroarch パーティション
 Arcade パーティション
-ビュー5+のミニ「Vita」
+2D: トップレス「Vita」
 最近再生しました
 最後にプレイしたゲームとカテゴリに戻る
 MSX2
@@ -117,3 +117,11 @@ Atari Lynx
 ColecoVision
 Vectrex
 Neo Geo Pocket Color
+カテゴリを上書き: <
+デフォルト
+名前を変更
+名前を変更します。 タイトルをリセットするには空白のままにします。
+インターネット接続が必要です
+クレジット
+背景をダウンロード
+日本語
