--- a/src/translations/PL.ini
+++ b/src/translations/PL.ini
@@ -11,13 +11,13 @@ Widok
 Zamknij
 Wersja
 Więcej Informacji
-Kategoria początkowa
+Kategoria Początkowa
 Cienie i Odbicia
 Dźwięki
 Kolor motywu
 Niestandardowe tło
-Pobierz okładki
-Odśwież bazę danych okładek
+Pobierz Okładki
+Pobierz Okładkę
 Język
 Włącz
 Wyłącz
@@ -44,15 +44,15 @@ Amiga
 TurboGrafx-16
 PC Engine
 Pokazuj Homebrews
-Skanuj na początku
+Skanuj na Początku
 Odnów dane Katalogu
 ZWYCZAJ
-Homebrew — pobieranie archiwum 'Vita'
-Skanowanie
-Proszę czekać...
-Menu
+Homebrew — Pobieranie Archiwum 'Vita'
+Pobieranie okładek *
+Proszę Czekać...
+Znaleziony *
+Nie znaleziono okładki
 Różowy
-Zrobione. Proszę 'Odnów dane Katalogu' w menu Start
 Znaleziono okładkę *!
 Pamięć podręczna została zaktualizowana.
 zapisywanie do pamięci podręcznej... proszę nie wstrzymywać/wyłączać
@@ -88,7 +88,7 @@ WonderSwan
 PICO-8
 Muzyka: Losowo
 Pętla
-Zezwól na widok #5/#6
+Widoki 2D
 Widok #7
 Zamieniać
 Zablokuj Ten Widok
@@ -104,7 +104,7 @@ Partycja Vita (zablokowana)
 Partycja PSPEMU
 Partycja Retroarch
 Partycja Arcade
-Przytnij 'Vita' w W.#5+
+Przytnij 'Vita' w 2D
 Ostatnio Odtwarzane
 Wróć do Ostatnio Granej Gry i Kategorii
 MSX2
@@ -117,3 +117,11 @@ Atari Lynx
 ColecoVision
 Vectrex
 Neo Geo Pocket Color
+Nadpisz kategorię: <
+Domyślna
+Zmień Nazwę
+Zmień Nazwę. Pozostaw puste, aby zresetować tytuł.
+Wymagane Połączenie z Internetem
+Kredyty
+Pobierz Tła
+Polski
