--- a/src/translations/PT_BR.ini
+++ b/src/translations/PT_BR.ini
@@ -4,7 +4,7 @@ PSP
 PS1
 Todos
 Configurações
-Abrir
+Executar
 Detalhes
 Categoria
 Ver
@@ -12,7 +12,7 @@ Fechar
 Versão
 Mais Informações
 Categoria Inicial
-Sombras e Reflexão
+Sombras e Reflexo
 Música e Sons
 Cor Temática
 Fundo Personalizado
@@ -29,7 +29,7 @@ Preto
 Roxo
 Laranja
 Azul
-Select
+Selecionar
 Nintendo 64
 Super Nintendo
 Nintendo Entertainment System
@@ -118,7 +118,7 @@ ColecoVision
 Vectrex
 Neo Geo Pocket Color
 Categoria Substituta: <
-Padrões
+Padrão
 Renomear
 Renomear. Deixe em branco para redefinir o título.
 Conexão com a Internet Necessária
