--- a/src/translations/RU.ini
+++ b/src/translations/RU.ini
@@ -1,9 +1,9 @@
 ﻿PS Vita
-Самодельный
+Homebrew
 PSP
 PS1
 Вce
-НАСТРОЙКИ
+Настройки
 Запустить
 Детали
 Категория
@@ -17,7 +17,7 @@ PS1
 Цвет Темы
 Собственный Фон
 Скачать Обложки
-Перезагрузка Дата Базы Обложек
+Скачать Обложку
 Язык
 ВКЛ
 ВЫКЛ
@@ -48,11 +48,11 @@ PC Engine
 Обновить кеш
 ОБЫЧАЙ
 Самодельный - Скачать из архива «Vita»
-Сканировать
+Скачивание обложек *
 Подождите пожалуйста...
-Меню
+Найдено *
+Обложки не найден
 Розовый
-Готово. Пожалуйста «обновите кеш» через меню «Пуск».
 Обложка * найдена!
 Кэш обновлен.
 запись в кеш... пожалуйста, не приостанавливайте/выключайте питание
@@ -104,7 +104,7 @@ RetroFlow
 Раздел PSPEMU
 Раздел Retroarch
 Раздел Arcade
-Обрезка «Виты» в В.#5+
+Обрезка "Vita" в 2D
 Недавно Играли
 Вернуться к последней игре и категории
 MSX2
@@ -117,3 +117,11 @@ Atari Lynx
 ColecoVision
 Vectrex
 Neo Geo Pocket Color
+Переклассифицировать: <
+Дефолт
+Переименовать
+Rename. Leave blank to reset title.
+Требуется подключение к Интернету
+Кредиты
+Скачать Фон
+Русский
