--- a/src/translations/SP.ini
+++ b/src/translations/SP.ini
@@ -3,7 +3,7 @@ Homebrews
 PSP
 PS1
 Todos
-OPCIONES
+Opciones
 Ejecutar
 Detalles
 Categorías
@@ -17,7 +17,7 @@ Música y Sonidos
 Color de Estilo
 Fondos Personalizados
 Descargar Portadas
-Actualizar Lista de Portadas
+Descargar Portada
 Idioma
 Encendido
 Apagado
@@ -48,11 +48,11 @@ Escaneo de inicio
 Actualizar Caché
 PERSONALIZADO
 Homebrew - Descarga del archivo 'Vita'
-Escanear
+Descarga de carátulas de *
 Espere por favor...
-Menú
+Encontrado *
+Portada no encontrada
 Rosa
-Listo. 'Actualizar caché' a través del menú de inicio por favor.
 Portada * encontrada!
 Se ha actualizado el caché.
 escribiendo en caché... por favor no suspenda/apague
@@ -88,7 +88,7 @@ WonderSwan
 PICO-8
 Música: Aleatoria
 Bucle
-Permitir Vista #5/#6
+Vistas 2D
 Vista #7
 Cambiar
 Usar Solo Esta Vista
@@ -104,7 +104,7 @@ Partición Vita (bloqueada)
 Partición PSPEMU
 Partición Retroarch
 Partición Arcade
-Recortar 'Vita' en V.#5+
+Recortar 'Vita' en 2D
 Recientemente Jugado
 Volver a Último juego jugado y categoría
 MSX2
@@ -117,3 +117,11 @@ Atari Lynx
 ColecoVision
 Vectrex
 Neo Geo Pocket Color
+Cambiar Categoria: <
+Predeterminada
+Rebautizar
+Rebautizar. Dejelo en blanco para restablecer el titulo.
+Requiere conexión a internet
+Créditos
+Descargar fondo
+Español
