--- a/src/translations/SW.ini
+++ b/src/translations/SW.ini
@@ -16,8 +16,8 @@ Skuggor & Reflektioner
 Musik & ljud
 Temafärg
 Egna bakgrunder
-Ladda ner omslag
-Ladda om omslagsdatabasen
+Ladda ner Omslag
+Ladda ner Omslaget
 Språk
 PÅ
 AV
@@ -48,11 +48,11 @@ Startskanning
 Uppdatera Cacheminnet
 BESTÄLLNINGS
 Homebrew - Special 'Vita'-arkivnedladdning
-Skanna
+Ladda ner *-omslag
 Vänta...
-Meny
+Hittade *
+Omslaget hittades inte
 Rosa
-Gjort. Vänligen 'Uppdatera Cacheminnet' via startmenyn
 Omslaget * hittat!
 Cache har uppdaterats.
 skriver till cache... snälla stäng inte av/stäng av
@@ -88,11 +88,11 @@ WonderSwan
 PICO-8
 Musik: Shuffle
 Loop
-Tillåt Vy #5/#6
+2D-Vyer
 Vy #7
 Byta
 Lås Aktuell Vy
-Dekryptera ikoner
+Dekryptera Ikoner
 RetroFlow
 RetroFlow-Inställningar
 Uppdatera Ikoner
@@ -104,7 +104,7 @@ Vita-Partition (låst)
 PSPEMU-Partition
 Retroarch-Partition
 Arcade-Partition
-Beskär 'Vita' i Vy #5+
+Beskär 'Vita' i 2D
 Nyligen Spelat
 Återgå till Senast Spelade Spel och Kategori
 MSX2
@@ -117,3 +117,11 @@ Atari Lynx
 ColecoVision
 Vectrex
 Neo Geo Pocket Color
+Åsidosätt Kategori: <
+Standard
+Döp Om
+Dop Om. Lamna tomt for att aterstalla titeln.
+Internetanslutning krävs
+Krediter
+Ladda ner Bakgrunder
+Svenska
