Updated translations to v2.6

--- a/src/translations/RU.ini
+++ b/src/translations/RU.ini
@@ -1,4 +1,4 @@
-PS Vita
+﻿PS Vita
 Homebrew
 PSP
 PS1
@@ -125,3 +125,4 @@ Rename. Leave blank to reset title.
 Кредиты
 Скачать Фон
 Русский
+ScummVM
