--- a/src/translations/SP.ini
+++ b/src/translations/SP.ini
@@ -1,4 +1,4 @@
-PS Vita
+﻿PS Vita
 Homebrews
 PSP
 PS1
@@ -125,3 +125,4 @@ Requiere conexión a internet
 Créditos
 Descargar fondo
 Español
+ScummVM
