--- a/src/translations/SW.ini
+++ b/src/translations/SW.ini
@@ -1,4 +1,4 @@
-PS Vita
+﻿PS Vita
 Homebrews
 PSP
 PS1
@@ -125,3 +125,4 @@ Internetanslutning krävs
 Krediter
 Ladda ner Bakgrunder
 Svenska
+ScummVM
