--- a/src/translations/DE.ini
+++ b/src/translations/DE.ini
@@ -1,4 +1,4 @@
-PS Vita
+﻿PS Vita
 Homebrews
 PSP
 PS1
@@ -125,3 +125,4 @@ Internetverbindung erforderlich
 Credits
 Hintergrund Downloaden
 Deutsch
+ScummVM
