--- a/src/translations/FR.ini
+++ b/src/translations/FR.ini
@@ -1,4 +1,4 @@
-PS Vita
+﻿PS Vita
 Homebrews
 PSP
 PS1
@@ -125,3 +125,4 @@ Connexion Internet requise
 Les crédits
 Télécharger l'arrière-plan
 Français
+ScummVM
