Updated translations to v2.7

--- a/src/translations/CN_S.ini
+++ b/src/translations/CN_S.ini
@@ -1,4 +1,4 @@
-﻿PS Vita
+PS Vita
 Homebrew/自制
 PSP
 PS1
@@ -71,7 +71,7 @@ Commodore 64
 复古的
 SwitchView 基本黑色
 SwitchView 基本白色
-游戏机模式
+游戏机模式 1
 游戏机模式 2
 水晶
 真正的 SwitchView 模式
