--- a/src/translations/CN_T.ini
+++ b/src/translations/CN_T.ini
@@ -1,4 +1,4 @@
-﻿PS Vita
+PS Vita
 Homebrew/自製
 PSP
 PS1
@@ -71,7 +71,7 @@ Commodore 64
 復古的
 SwitchView 基本黑色
 SwitchView 基本白色
-遊戲機模式
+遊戲機模式 1
 遊戲機模式 2
 水晶
 真正的 SwitchView 模式
