--- a/src/translations/DA.ini
+++ b/src/translations/DA.ini
@@ -71,7 +71,7 @@ Marmor
 Retro
 SwitchView Basic Sort
 SwitchView Basic Hvid
-Playstation Mønster
+Playstation Mønster 1
 Playstation Mønster 2
 Krystal
 Ægte SwitchView-tilstand
