--- a/src/translations/DE.ini
+++ b/src/translations/DE.ini
@@ -1,4 +1,4 @@
-﻿PS Vita
+PS Vita
 Homebrews
 PSP
 PS1
@@ -71,7 +71,7 @@ Marmor
 Retro
 SwitchView Grundlegendes Schwarz
 SwitchView Grundlegendes Weiß
-Playstation-Muster
+Playstation-Muster 1
 Playstation-Muster 2
 Kristall
 Echter SwitchView-Modus
