--- a/src/translations/FI.ini
+++ b/src/translations/FI.ini
@@ -71,7 +71,7 @@ Marmori
 Retro
 SwitchView Basic Musta
 SwitchView Basic Valkoinen
-Playstation Malli
+Playstation Malli 1
 Playstation Malli 2
 Kristalli
 Todellinen SwitchView-tila
