--- a/src/translations/FR.ini
+++ b/src/translations/FR.ini
@@ -1,4 +1,4 @@
-﻿PS Vita
+PS Vita
 Homebrews
 PSP
 PS1
@@ -71,7 +71,7 @@ Marbre
 Rétro
 SwitchView Noir de Base
 SwitchView Blanc de Base
-Modèle Playstation
+Modèle Playstation 1
 Modèle Playstation 2
 Cristal
 Véritable Mode SwitchView
