--- a/src/translations/IT.ini
+++ b/src/translations/IT.ini
@@ -71,7 +71,7 @@ Marmo
 Retrò
 SwitchView Nero di Base
 SwitchView Bianco di base
-Modello Playstation
+Modello Playstation 1
 Modello Playstation 2
 Cristallo
 Modalità SwitchView vera
