--- a/src/translations/JA.ini
+++ b/src/translations/JA.ini
@@ -1,4 +1,4 @@
-﻿PS Vita
+PS Vita
 自作
 PSP
 PS1
@@ -71,7 +71,7 @@ Commodore 64
 レトロ
 SwitchView ベーシックブラック
 SwitchView ベーシックホワイト
-Playstation パターン
+Playstation パターン1
 Playstation パターン2
 結晶
 トゥルー スイッチビュー モード
