--- a/src/translations/KO.ini
+++ b/src/translations/KO.ini
@@ -1,4 +1,4 @@
-﻿PS Vita
+PS Vita
 Homebrew/홈브류
 PSP
 PS1
@@ -71,7 +71,7 @@ Commodore 64
 레트로
 SwitchView 기본 블랙
 SwitchView 기본 흰색
-플레이스테이션 패턴
+플레이스테이션 패턴 1
 플레이스테이션 패턴 2
 결정
 진정한 SwitchView 모드
