--- a/src/translations/NL.ini
+++ b/src/translations/NL.ini
@@ -71,7 +71,7 @@ Marmer
 Retro
 SwitchView Basis Zwart
 SwitchView Basis Wit
-PlayStation-Patroon
+PlayStation-Patroon 1
 PlayStation-Patroon 2
 Kristal
 Echte SwitchView-Modus
