--- a/src/translations/NO.ini
+++ b/src/translations/NO.ini
@@ -71,7 +71,7 @@ Marmor
 Retro
 SwitchView Enkel Svart
 SwitchView Enkel Hvit
-Playstation Mønster
+Playstation Mønster 1
 Playstation Mønster 2
 Krystall
 Ekte SwitchView-Modus
