--- a/src/translations/PL.ini
+++ b/src/translations/PL.ini
@@ -1,4 +1,4 @@
-﻿PS Vita
+PS Vita
 Homebrews
 PSP
 PS1
@@ -71,7 +71,7 @@ Marmur
 Retro
 SwitchView Podstawowy Czarny
 SwitchView Podstawowy Biały
-Playstation Wzór
+Playstation Wzór 1
 Playstation Wzór 2
 Kryształ
 Prawdziwy tryb SwitchView
