--- a/src/translations/RU.ini
+++ b/src/translations/RU.ini
@@ -1,4 +1,4 @@
-﻿PS Vita
+PS Vita
 Homebrew
 PSP
 PS1
@@ -71,7 +71,7 @@ Commodore 64
 Ретро
 SwitchView Базовый черный
 SwitchView Базовый белый
-Playstation 1Шаблон
+Playstation 1Шаблон 1
 Playstation 1Шаблон 2
 Кристалл
 Истинный режим SwitchView
