--- a/src/translations/SP.ini
+++ b/src/translations/SP.ini
@@ -1,4 +1,4 @@
-﻿PS Vita
+PS Vita
 Homebrews
 PSP
 PS1
@@ -71,7 +71,7 @@ Mármol
 Retro
 SwitchView Negro Básico
 SwitchView Blanco Básico
-Patrón de Playstation
+Patrón 1 de Playstation
 Patrón 2 de Playstation
 Cristal
 Verdadero modo SwitchView
