--- a/src/translations/SW.ini
+++ b/src/translations/SW.ini
@@ -1,4 +1,4 @@
-﻿PS Vita
+PS Vita
 Homebrews
 PSP
 PS1
@@ -71,7 +71,7 @@ Marmor
 Retro
 SwitchView Basic Svart
 SwitchView Basic Vit
-Playstation Mönster
+Playstation Mönster 1
 Playstation Mönster 2
 Kristall
 Äkta SwitchView-Läge
