--- a/src/translations/TR.ini
+++ b/src/translations/TR.ini
@@ -71,7 +71,7 @@ Mermer
 Retro
 SwitchView Temel Siyah
 SwitchView Temel Beyaz
-Playstation Desen
+Playstation Desen 1
 Playstation Desen 2
 Kristal
 Gerçek SwitchView Modu
