--- a/src/translations/EN_USA.ini
+++ b/src/translations/EN_USA.ini
@@ -71,7 +71,7 @@ Marble
 Retro
 SwitchView Basic Black
 SwitchView Basic White
-Playstation Pattern
+Playstation Pattern 1
 Playstation Pattern 2
 Crystal
 True SwitchView Mode
