--- a/src/translations/PT_BR.ini
+++ b/src/translations/PT_BR.ini
@@ -71,7 +71,7 @@ Mármore
 Retrô
 SwitchView Preto Básico
 SwitchView Branco Básico
-Playstation Padrão
+Playstation Padrão 1
 Playstation Padrão 2
 Cristal
 Verdadeiro Modo SwitchView
